--- a/requirements.txt
+++ b/requirements.txt
@@ -17,14 +17,17 @@ msgspec==0.19.0
 multidict==6.1.0
 polyfactory==2.18.1
 pydantic==2.10.4
+pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 PyYAML==6.0.2
 rich==13.9.4
 rich-click==1.8.5
 six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 uvicorn==0.34.0
 zipp==3.21.0
