🐛 FIX: gitifnore leak fix

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-venv
-.idea
+venv/
+.idea/
 .DS_Store
-pycache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.log
+*.sqlite3
+*.env
+*.local
+*.cache/
+*.coverage
+*.egg-info/
+dist/
+build/
