--- a/requirements.txt
+++ b/requirements.txt
@@ -6,22 +6,27 @@ certifi==2024.12.14
 click==8.1.8
 exceptiongroup==1.2.2
 Faker==33.3.0
+greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 importlib_metadata==8.5.0
+iniconfig==2.0.0
 litestar==2.13.0
 litestar-htmx==0.4.1
 markdown-it-py==3.0.0
 mdurl==0.1.2
 msgspec==0.19.0
 multidict==6.1.0
+packaging==24.2
+pluggy==1.5.0
 polyfactory==2.18.1
 pydantic==2.10.4
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
+pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.2
@@ -30,6 +35,7 @@ rich-click==1.8.5
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
+tomli==2.2.1
 typing_extensions==4.12.2
 uvicorn==0.34.0
 zipp==3.21.0
