--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ async-timeout==5.0.1
 asyncpg==0.30.0
 certifi==2024.12.14
 click==8.1.8
+dnspython==2.7.0
+email_validator==2.2.0
 exceptiongroup==1.2.2
 Faker==33.3.0
 greenlet==3.1.1
@@ -20,6 +22,7 @@ mdurl==0.1.2
 msgspec==0.19.0
 multidict==6.1.0
 packaging==24.2
+passlib==1.7.4
 pluggy==1.5.0
 polyfactory==2.18.1
 pydantic==2.10.4
