--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.8.0
 async-timeout==5.0.1
 asyncpg==0.30.0
+bcrypt==4.2.1
 certifi==2024.12.14
 click==8.1.8
 dnspython==2.7.0
