--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ bcrypt==4.2.1
 certifi==2024.12.14
 click==8.1.8
 dnspython==2.7.0
+ecdsa==0.19.0
 email_validator==2.2.0
 exceptiongroup==1.2.2
 Faker==33.3.0
@@ -26,6 +27,7 @@ packaging==24.2
 passlib==1.7.4
 pluggy==1.5.0
 polyfactory==2.18.1
+pyasn1==0.6.1
 pydantic==2.10.4
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
@@ -33,9 +35,11 @@ Pygments==2.19.1
 pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-jose==3.3.0
 PyYAML==6.0.2
 rich==13.9.4
 rich-click==1.8.5
+rsa==4.9
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
